# vacusim

./: .gitignore  README-german.md  README.md
vacusim_robot_driver/: package.xml  setup.cfg  setup.py
vacusim_robot_driver/controllers/ground/: apartment-25x25_scaled.txt  apartment-512x512.txt  ground  ground.c
vacusim_robot_driver/controllers/large_ground/: large_ground  large_ground.c
vacusim_robot_driver/controllers/supervisor/: supervisor.py
vacusim_robot_driver/controllers/supervisor_ros/: supervisor_ros.py
vacusim_robot_driver/controllers/supervisor_udp/: supervisor_udp.py
vacusim_robot_driver/launch/: apartment_launch.py  empty_apartment_launch.py  empty_large_apartment_launch.py  large_apartment_launch.py  robot_driver_launch.py  simple_arena_launch.py
vacusim_robot_driver/protos/: Custom_iRobot_Create.proto
vacusim_robot_driver/resource/: robot.urdf
vacusim_robot_driver/vacusim_robot_driver/: vacusim_robot_driver.py
vacusim_robot_driver/worlds/: .apartment.wbproj  .apartment_benchmark.wbproj  .apartment_no_furniture.wbproj  .benchmark_apartment.wbproj  .benchmark_empty_apartment.wbproj  .benchmark_empty_large_apartment.wbproj  .benchmark_large_apartment.wbproj  .empty_apartment.wbproj  .empty_large_apartment.wbproj  .large_apartment.wbproj  .simple_arena.wbproj  apartment.wbt  apartment_benchmark.wbt  apartment_benchmark_2.wbt  apartment_no_furniture.wbt  benchmark_apartment.wbt  benchmark_empty_apartment.wbt  benchmark_empty_large_apartment.wbt  benchmark_large_apartment.wbt  empty_apartment.wbt  empty_large_apartment.wbt  large_apartment.wbt  new_apartment_25x25.wbt  simple_arena.wbt
vacusim_robot_driver/worlds/new_apartment/: new_apartment.wbt
vacusim_robot_planning/: README-slides.md  README-technical.md  package.xml  setup.cfg  setup.py
vacusim_robot_planning/launch/: planner_launch.py
vacusim_robot_planning/maps/: default_map.txt
vacusim_robot_planning/vacusim_robot_planning/: planner_node.py
(+19 files in other folders)
