<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vacusim_robot_driver</name>
  <version>0.2.0</version>
  <description>VacuSim Robot Driver is an interface between ROS 2 and Webots.</description>
  <maintainer email="mmints@uni-koblenz.de">Mark O. Mints</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>webots_ros2_driver</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>vacusim_robot_interfaces</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
